--- a/app/src/main/res/layout/expandable_conduite_continue.xml
+++ b/app/src/main/res/layout/expandable_conduite_continue.xml
@@ -13,9 +13,9 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="60dp"
             android:padding="6dp"
-            android:text="Temps de conduite continue maximal : \n4h30min"
+            android:text="Temps de conduite continue maximal : \n4h30"
             android:textSize="14sp"
             android:textStyle="bold" />
 
