--- a/app/src/main/res/layout/expandable_repos_hebdo.xml
+++ b/app/src/main/res/layout/expandable_repos_hebdo.xml
@@ -14,9 +14,9 @@
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="85dp"
             android:padding="6dp"
-            android:text="Temps de conduite sur deux semaines :\n90 Heures sur 2 semaines consécutives"
+            android:text="Période de repos ininterrompue de 56 heures obligatoire après 6 amplitudes de 24 heures.\nPeut être réduit à 24h00 une fois entre 2 repos normaux."
             android:textSize="14sp"
             android:textStyle="bold" />
 
