--- a/app/src/main/res/layout/fragment_repos_hebdo2.xml
+++ b/app/src/main/res/layout/fragment_repos_hebdo2.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="6dp">
-
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,9 +21,9 @@
             <TextView
                 android:id="@+id/textView13"
                 android:layout_width="match_parent"
-                android:layout_height="28dp"
+                android:layout_height="40dp"
                 android:gravity="center"
-                android:text="Calculatrice d'amplitude"
+                android:text="Repos Hebdomadaire"
                 android:textColor="#300505"
                 android:textSize="20sp" />
 
@@ -41,43 +38,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Date et Heure actuelle" />
-
-                    <TextView
-                        android:id="@+id/tvDateDuJour"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:gravity="end"
-                        android:textAlignment="textEnd"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tvHeureJour"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
                 <TextView
                     android:id="@+id/textView8"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:gravity="center_vertical"
-                    android:text="Début d'amplitude"
+                    android:text="Début du repos :"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -91,7 +58,7 @@
                         android:orientation="horizontal">
 
                         <ImageButton
-                            android:id="@+id/imageButtonDate"
+                            android:id="@+id/imageButtonDateDebut"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
@@ -106,7 +73,7 @@
                             tools:ignore="SpeakableTextPresentCheck" />
 
                         <ImageButton
-                            android:id="@+id/imageButtonHeure"
+                            android:id="@+id/imageButtonHeureDebut"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
@@ -120,7 +87,7 @@
                             android:gravity="center" />
 
                         <ImageButton
-                            android:id="@+id/imageButtonDeleteFin"
+                            android:id="@+id/imageButtonDeleteDebut"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
@@ -131,44 +98,11 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="match_parent"
-                    android:layout_height="36dp"
-                    android:gravity="center_vertical"
-                    android:text="Repos journalier"
-                    android:textStyle="bold" />
-
-                <RadioGroup
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <RadioButton
-                        android:id="@+id/radioButton11"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:checked="true"
-                        android:ems="6"
-                        android:minHeight="48dp"
-                        android:text="11 heures (amplitude 13 heures)" />
-
-                    <RadioButton
-                        android:id="@+id/radioButton9"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:ems="16"
-                        android:minHeight="48dp"
-                        android:text="9 heures (amplitude 15 heures ) 3x/semaine" />
-                </RadioGroup>
-
-                <TextView
                     android:id="@+id/textView15"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:gravity="center_vertical"
-                    android:text="Fin d'amplitude"
+                    android:text="Repos réduit réalisé à partir de :"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -228,55 +162,157 @@
                             android:orientation="horizontal"/>
 
                         <TextView
-                            android:id="@+id/tvTempsServiveNuit"
+                            android:id="@+id/textView16"
                             android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:gravity="center"
-                            android:text="Temps de service de nuit" />
+                            android:layout_height="36dp"
+                            android:gravity="center_vertical"
+                            android:text="Repos normal réalisé à partir de :"
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
                 </LinearLayout>
 
-
-
-                <lecho.lib.hellocharts.view.PieChartView
-                    android:id="@+id/chart"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:orientation="horizontal" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView17"
-                    android:layout_width="match_parent"
-                    android:layout_height="36dp"
-                    android:gravity="center_vertical"
-                    android:text="Réglage de notication"
-                    android:textStyle="bold" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/tvDateReposNormal"
+                            android:layout_width="110dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginRight="6dp"
+                            android:background="@drawable/bg_rectangle_order"
+                            android:gravity="center"
+                            tools:ignore="SpeakableTextPresentCheck" />
+
+
+                        <TextView
+                            android:id="@+id/tvHeureReposNormal"
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginRight="6dp"
+                            android:background="@drawable/bg_rectangle_order"
+                            android:gravity="center" />
+
+                        <TextView
+                            android:id="@+id/tvTempsRestantNormal"
+                            android:layout_width="120dp"
+                            android:layout_height="match_parent"
+                            android:layout_marginRight="6dp"
+                            android:background="@drawable/bg_rectangle_order"
+                            android:gravity="center" />
+                    </LinearLayout>
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"/>
 
-                    <Switch
-                        android:id="@+id/switchAlarm"
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_vertical"
+                    android:text="Fin du repos :"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="48dp"
-                        android:layout_weight="1"
-                        android:text="Notification avant la fin de l'amplitude" />
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tvNotificationTimeBefore"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end"
+                        <ImageButton
+                            android:id="@+id/imageButtonDateFin"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:cropToPadding="true"
+                            android:src="@drawable/ic_baseline_calendar_today_24" />
 
-                        android:text="@string/notification_time"
-                        android:textAlignment="textEnd"
-                        android:textColor="#3949AB" />
+                        <TextView
+                            android:id="@+id/tVDateFin"
+                            android:layout_width="100dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/bg_rectangle_order"
+                            android:gravity="center"
+                            tools:ignore="SpeakableTextPresentCheck" />
+
+                        <ImageButton
+                            android:id="@+id/imageButtonHeureFin"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:cropToPadding="true"
+                            android:src="@drawable/ic_baseline_access_time_24" />
+
+                        <TextView
+                            android:id="@+id/tvHeureFin"
+                            android:layout_width="70dp"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/bg_rectangle_order"
+                            android:gravity="center" />
+
+                        <ImageButton
+                            android:id="@+id/imageButtonDeleteFin"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:cropToPadding="true"
+                            android:src="@drawable/ic_baseline_clear_24" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_vertical"
+                    android:text="Bilan entre le début et la fin du repos :"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvResultatDifference"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvBilan"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvBilan2"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:text="la réduction est compensée par une période de repos équivalente prise en bloc avant la fin de la troisième semaine suivant la semaine en question."
+                    android:textStyle="bold" />
+
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
