--- a/app/src/main/res/layout/fragment_semaines.xml
+++ b/app/src/main/res/layout/fragment_semaines.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="6dp">
+    android:orientation="vertical">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -26,84 +24,99 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
-                <TextView
-                    android:id="@+id/textView17"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="36dp"
-                    android:gravity="center_vertical"
-                    android:text="Ma semaine"
-                    android:textStyle="bold" />
+                    android:layout_height="40dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:gravity="center"
+                        android:text="Ma semaine"
+                        android:textColor="#1D2A7C"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/reposh"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Repos hebdo"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
                     app:inner_view="@layout/expandable_conduite_bihebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Repos hebdo" />
 
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/amplitude1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Jour 1"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
-                    app:inner_view="@layout/expandable_conduite_continue"
-                    app:expandOnClick="true"/>
+                    app:inner_view="@layout/expandable_semaine_jour1"
+                    app:title="Jour 1" />
 
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/amplitude2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Jour 2"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
-                    app:inner_view="@layout/expandable_conduite_journaliere"
-                    app:expandOnClick="true"/>
+                    app:inner_view="@layout/expandable_semaine_jour1"
+                    app:title="Jour 2" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/amplitude3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Jour 3"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
                     app:inner_view="@layout/expandable_conduite_hebdomadaire"
-                    app:expandOnClick="true"/>
+                    app:title="Jour 3" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/amplitude4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Jour 4"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
                     app:inner_view="@layout/expandable_conduite_bihebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Jour 4" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/amplitude5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Jour 5"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
                     app:inner_view="@layout/expandable_conduite_bihebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Jour 5" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/amplitude6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Jour 6"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
                     app:inner_view="@layout/expandable_conduite_bihebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Jour 6" />
+
                 <com.alespero.expandablecardview.ExpandableCardView
                     android:id="@+id/reposh2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:title="Repos hebdo"
+                    app:expandOnClick="true"
                     app:icon="@drawable/ic_baseline_timer_24"
                     app:inner_view="@layout/expandable_conduite_bihebdo"
-                    app:expandOnClick="true"/>
+                    app:title="Repos hebdo" />
+
             </LinearLayout>
+
+
+
         </ScrollView>
-
-
 
 
     </LinearLayout>
