--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,7 @@
             android:layout_gravity="center_horizontal"
             android:contentDescription="@string/nav_header_desc"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:src="@drawable/img_2" />
+            app:srcCompat="@drawable/image" />
 
     </LinearLayout>
 
