--- a/app/src/main/res/layout/accueil_fragment.xml
+++ b/app/src/main/res/layout/accueil_fragment.xml
@@ -12,19 +12,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
             android:orientation="vertical">
-
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:orientation="horizontal">
-
                 <Button
                     android:id="@+id/button1"
                     android:layout_width="match_parent"
@@ -37,9 +33,7 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:layout_margin="2dp"
-                    android:layout_centerInParent="true"
                     android:background="@drawable/button_border"/>
-
                 <Button
                     android:id="@+id/button2"
                     android:layout_width="match_parent"
@@ -52,31 +46,25 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:layout_margin="2dp"
-                    android:layout_centerInParent="true"
                     android:background="@drawable/button_border"/>
-
-
             </LinearLayout>
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:orientation="horizontal">
-
                 <Button
                     android:id="@+id/button4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textColor="#1D2A7C"
-                    android:text="Ma semaine" android:paddingTop="10dp"
+                    android:text="Ma semaine"
+                    android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:layout_margin="2dp"
-                    android:layout_centerInParent="true"
                     android:background="@drawable/button_border"/>
-
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="match_parent"
@@ -88,21 +76,47 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
                     android:layout_margin="2dp"
-                    android:layout_centerInParent="true"
                     android:background="@drawable/button_border"/>
-
             </LinearLayout>
-
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/button5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Vitesse\nmoyenne"
+                    android:textColor="#1D2A7C"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/button_border"/>
+                <Button
+                    android:id="@+id/button6"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Calculatrice\nde temps"
+                    android:textColor="#1D2A7C"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:layout_margin="2dp"
+                    android:background="@drawable/button_border"/>
+            </LinearLayout>
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="match_parent"
+                android:layout_height="250dp"
                 android:paddingTop="40dp"
-                android:layout_height="300dp"
+                android:paddingBottom="40dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/image" />
-
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
