--- a/app/src/main/res/layout/expandable_semaine_jour1.xml
+++ b/app/src/main/res/layout/expandable_semaine_jour1.xml
@@ -52,7 +52,7 @@
                     android:src="@drawable/ic_baseline_access_time_24" />
 
                 <TextView
-                    android:id="@+id/tvHeureDebut"
+                    android:id="@+id/tvHeure1"
                     android:layout_width="70dp"
                     android:layout_height="match_parent"
                     android:background="@drawable/bg_rectangle_order"
@@ -96,7 +96,7 @@
                     android:gravity="center" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonHeure"
+                    android:id="@+id/imageButtonCalcul1"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
@@ -110,7 +110,7 @@
                     android:gravity="center" />
 
                 <ImageButton
-                    android:id="@+id/imageButtonDeleteFin"
+                    android:id="@+id/imageButtonDelete"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:cropToPadding="true"
