--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimary"
+        android:background="@color/grey_10"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -30,7 +30,7 @@
             android:maxLines="10"
             android:paddingTop="40dp"
             android:text="GoodDriver"
-            android:textColor="@color/white"
+            android:textColor="@color/colorAccent"
             android:textSize="40sp"
             android:textStyle="bold" />
 
@@ -42,7 +42,7 @@
             android:maxLines="10"
             android:paddingTop="50dp"
             android:text="Suivez votre temps\n\nne commettez\n\nplus d'infractions"
-            android:textColor="#0D1750"
+            android:textColor="@color/blue"
             android:textSize="24sp"
             android:textStyle="bold" />
     </LinearLayout>
