--- a/app/src/main/res/layout/fragment_amplitude.xml
+++ b/app/src/main/res/layout/fragment_amplitude.xml
@@ -27,7 +27,7 @@
                 android:layout_height="28dp"
                 android:gravity="center"
                 android:text="Calculatrice d'amplitude"
-                android:textColor="#300505"
+                android:textColor="@color/blue"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -40,37 +40,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Date et Heure actuelle" />
-
-                    <TextView
-                        android:id="@+id/tvDateDuJour"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="0.5"
-                        android:gravity="end"
-                        android:textAlignment="textEnd"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tvHeureJour"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-                </LinearLayout>
 
                 <TextView
                     android:id="@+id/textView8"
@@ -106,21 +75,21 @@
                             tools:ignore="SpeakableTextPresentCheck" />
 
                         <ImageButton
-                            android:id="@+id/imageButtonHeure"
+                            android:id="@+id/imageButtonCalcul1"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
                             android:src="@drawable/ic_baseline_access_time_24" />
 
                         <TextView
-                            android:id="@+id/tvHeureDebut"
+                            android:id="@+id/tvHeure1"
                             android:layout_width="70dp"
                             android:layout_height="match_parent"
                             android:background="@drawable/bg_rectangle_order"
                             android:gravity="center" />
 
                         <ImageButton
-                            android:id="@+id/imageButtonDeleteFin"
+                            android:id="@+id/imageButtonDelete"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
