--- a/app/src/main/res/layout/fragment_reglementation.xml
+++ b/app/src/main/res/layout/fragment_reglementation.xml
@@ -27,7 +27,7 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:text="Réglementation"
-                android:textColor="#1D2A7C"
+                android:textColor="@color/blue"
                 android:textSize="20sp" />
 
         </LinearLayout>
