--- a/app/src/main/res/layout/fragment_repos_hebdo1.xml
+++ b/app/src/main/res/layout/fragment_repos_hebdo1.xml
@@ -24,7 +24,7 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:text="Repos Hebdomadaire"
-                android:textColor="#300505"
+                android:textColor="@color/blue"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -80,7 +80,7 @@
                             android:src="@drawable/ic_baseline_access_time_24" />
 
                         <TextView
-                            android:id="@+id/tvHeureDebut"
+                            android:id="@+id/tvHeure1"
                             android:layout_width="70dp"
                             android:layout_height="match_parent"
                             android:background="@drawable/bg_rectangle_order"
@@ -98,11 +98,11 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView15"
+                    android:id="@+id/textView16"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:gravity="center_vertical"
-                    android:text="Repos réduit réalisé à partir de :"
+                    android:text="Repos normal réalisé à partir de :"
                     android:textStyle="bold" />
 
                 <LinearLayout
@@ -144,32 +144,25 @@
 
                 </LinearLayout>
 
-
-                <LinearLayout
+                <ProgressBar
+                    android:id="@+id/progressBar24"
+                    style="@android:style/Widget.Material.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="20dp"
+                    android:layout_marginTop="15dp"
+                    android:max="24"
+                    android:progressDrawable="@drawable/progress_background"
+                    android:progressTint="#79C12C" />
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_vertical"
+                    android:text="Repos réduit réalisé à partir de :"
+                    android:textStyle="bold" />
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal"/>
 
-                        <TextView
-                            android:id="@+id/textView16"
-                            android:layout_width="match_parent"
-                            android:layout_height="36dp"
-                            android:gravity="center_vertical"
-                            android:text="Repos normal réalisé à partir de :"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -205,7 +198,19 @@
                             android:background="@drawable/bg_rectangle_order"
                             android:gravity="center" />
                     </LinearLayout>
+
                 </LinearLayout>
+
+                <ProgressBar
+                    android:id="@+id/progressBar45"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_marginTop="15dp"
+                    android:max="45"
+                    android:progressDrawable="@drawable/progress_background"
+                    android:progressTint="#79C12C" />
+
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
