--- a/app/src/main/res/layout/fragment_repos_hebdo2.xml
+++ b/app/src/main/res/layout/fragment_repos_hebdo2.xml
@@ -24,7 +24,7 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:text="Repos Hebdomadaire"
-                android:textColor="#300505"
+                android:textColor="@color/blue"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -80,7 +80,7 @@
                             android:src="@drawable/ic_baseline_access_time_24" />
 
                         <TextView
-                            android:id="@+id/tvHeureDebut"
+                            android:id="@+id/tvHeure1"
                             android:layout_width="70dp"
                             android:layout_height="match_parent"
                             android:background="@drawable/bg_rectangle_order"
@@ -151,7 +151,7 @@
                             android:gravity="center" />
 
                         <ImageButton
-                            android:id="@+id/imageButtonDeleteFin"
+                            android:id="@+id/imageButtonDelete"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:cropToPadding="true"
