--- a/app/src/main/res/layout/fragment_semaines.xml
+++ b/app/src/main/res/layout/fragment_semaines.xml
@@ -35,7 +35,7 @@
                         android:layout_height="40dp"
                         android:gravity="center"
                         android:text="Ma semaine"
-                        android:textColor="#1D2A7C"
+                        android:textColor="@color/blue"
                         android:textSize="20sp" />
 
                 </LinearLayout>
