--- a/app/src/main/res/layout/fragment_vitesse_moyenne.xml
+++ b/app/src/main/res/layout/fragment_vitesse_moyenne.xml
@@ -24,7 +24,7 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:text="Vitesse moyenne"
-                android:textColor="#0E174A"
+                android:textColor="@color/blue"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -38,63 +38,122 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/textView2"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:gravity="center_vertical"
-                    android:text="Début du repos :"
+                    android:text="Durée du trajet"
                     android:textStyle="bold" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <EditText
                         android:id="@+id/etHeure1"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="70dp"
+                        android:layout_height="50dp"
+                        android:background="@drawable/bg_rectangle_order"
+                        android:gravity="center"
                         android:inputType="number"
                         android:maxLength="4" />
 
                     <TextView
-                        android:id="@+id/textView11"
+                        android:id="@+id/textView19"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=" H " />
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:text="H"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etMinute1"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="70dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/bg_rectangle_order"
+                        android:gravity="center"
                         android:inputType="number"
                         android:maxLength="2" />
 
+                    <ImageButton
+                        android:id="@+id/imageButtonDelete"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/ic_baseline_clear_24" />
+
                 </LinearLayout>
 
-                <EditText
-                    android:id="@+id/editTextNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="number" />
-
                 <TextView
-                    android:id="@+id/textView15"
+                    android:id="@+id/textView14"
                     android:layout_width="match_parent"
                     android:layout_height="36dp"
                     android:gravity="center_vertical"
-                    android:text="Repos réduit réalisé à partir de :"
+                    android:text="Nombre de kilomètres"
                     android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/etKilometres"
+                        android:layout_width="150dp"
+                        android:layout_height="50dp"
+                        android:layout_weight="1"
+                        android:background="@drawable/bg_rectangle_order"
+                        android:gravity="center"
+                        android:inputType="number"
+                        tools:ignore="SpeakableTextPresentCheck" />
+
+                    <ImageButton
+                        android:id="@+id/imageButtonDelete2"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_baseline_clear_24" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="match_parent"
+                    android:layout_height="36dp"
+                    android:gravity="center_vertical"
+                    android:text="Vitesse moyenne en km/h"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/imageButtonCalcul"
+                        android:layout_width="120dp"
+                        android:layout_height="50dp"
+                        android:layout_marginRight="30dp"
+                        android:cropToPadding="true"
+                        android:src="@drawable/ic_baseline_arrow_right_24" />
+
+                    <TextView
+                        android:id="@+id/tvResultat"
+                        android:layout_width="150dp"
+                        android:layout_height="match_parent"
+                        android:textStyle="bold"
+                        android:background="@drawable/bg_rectangle_order"
+                        android:gravity="center" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"/>
-
-
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
