--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,7 +24,7 @@
         <item
             android:id="@+id/nav_semaines"
             android:icon="@drawable/image"
-            android:title="Semaine" />
+            android:title="Ma semaine" />
         <item
             android:id="@+id/nav_vitesse"
             android:icon="@drawable/image"
