--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,11 @@
 <resources>
 
     <color name="black">#FF000000</color>
+    <color name="blue">#0E3F6C</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_10">#FAF7F6</color>
+    <color name="grey_20">#D1CAC9</color>
+    <color name="grey_40">#958E8C</color>
     <color name="transparentColor">#C1FFFFFF</color>
     <color name="colorPrimary">#F44336</color>
     <color name="colorPrimaryDark">#F44336</color>
