--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -44,4 +44,8 @@
     <dimen name="spacing_standard">8dp</dimen>
 
     <dimen name="divider_width">0.5dp</dimen>
+
+    <dimen name="box_size">64dp</dimen>
+    <dimen name="box_size_land">50dp</dimen>
+    <dimen name="border_width">0.5dp</dimen>
 </resources>
