--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,6 @@
         <item name="colorControlNormal">@color/red600</item>
         <item name="android:windowBackground">@color/grey_10</item>
         <item name="colorControlActivated">#D60000</item>
-        <!-- Couleur menu des 3 points -->
         <item name="android:itemBackground">@color/grey_10</item>
     </style>
 
@@ -39,9 +38,9 @@
     <!-- Couleur du burger menu et des 3 points + titre-->
     <style name="AppTheme.AppBarOverlay.test" parent="ThemeOverlay.AppCompat.ActionBar">
         <!-- Couleur du burger menu et des 3 points + titre-->
-        <item name="colorControlNormal">@color/red50</item>
+        <item name="colorControlNormal">@color/white</item>
         <!-- Couleur du titre de la barre de menu -->
-        <item name="titleTextColor">@color/red50</item>
+        <item name="titleTextColor">@color/white</item>
         <item name="android:itemBackground">@color/grey_10</item>
 
     </style>
